# jhcommon

./: CMakeLists.txt  Makefile  TODO.txt  build.mk  build.sh
darwin_build/jhCommon/: jhCommonTarget.xcconfig  jhCommon_Prefix.pch
darwin_build/jhCommon/jhCommon.xcodeproj/: benpayne.mode1v3  benpayne.pbxuser  project.pbxproj
doc/: jh_memory.readme
include/: Allocator.h  AppArgs.h  CircularBuffer.h  CodeTimer.h  ComponentManager.h  ComponentManagerUtils.h  Condition.h  Event.h  EventAgent.h  EventAgentT.h  EventDispatcher.h  EventQueue.h  EventThread.h  FdReaderWriter.h  FieldMap.h  File.h  GlobalConstructor.h  HttpAgent.h  HttpHeader.h  HttpHeaderBase.h  HttpRequest.h  HttpResponse.h  IReaderWriter.h  ISerializer.h  JHCOM.h  JHCOM_IDL.h  JetHead.h  List++.h  ListenerContainer.h  MulticastSocket.h  Mutex.h  Path.h  RefCount.h  Regex.h  Selector.h  SerializerBase.h  Socket.h  Thread.h  TimeUtils.h  Timer.h  (+10 more)
jhidl/: DumpCPlusPlus.cpp  DumpCPlusPlus.h  DumpXML.cpp  DumpXML.h  IFoo.idl  ISupports.idl  Makefile  ObjectManager.h  Reflect.cpp  Reflect.h  Variant.h  build.mk  jhidl.cpp
jhidl/test/: ITest.idl  Makefile  test.cpp
src/: Allocator.cpp  AppArgs.cpp  CMakeLists.txt  CircularBuffer.cpp  ComponentManager.cpp  ComponentManagerClient.cpp  ComponentManagerUtils.cpp  Condition.cpp  EventDispatcher.cpp  EventQueue.cpp  EventThread.cpp  FdReaderWriter.cpp  File.cpp  HttpAgent.cpp  HttpHeader.cpp  HttpHeaderBase.cpp  HttpRequest.cpp  HttpResponse.cpp  JH_64BitFops.h  JetHead.cpp  Makefile  MulticastSocket.cpp  Mutex.cpp  Path.cpp  Regex.cpp  Selector.cpp  Socket.cpp  Thread.cpp  Timer.cpp  TimerManager.cpp  URI.cpp  build.mk  jh_memory.cpp  logging.cpp
test/: CMakeLists.txt  CircularBufferTest.cpp  CircularBufferTest2.cpp  FileTest.cpp  FooService.cpp  HttpClientTest.cpp  IFoo.h  ListThreading.cpp  Makefile  PathTest.cpp  README.txt  SocketTest.cpp  SocketTest2.cpp  TelnetServer.cpp  TestCase.h  URITest.cpp  allocatorTest.cpp  comServer.cpp  eventAgentTest.cpp  eventThreadTest.cpp  listenerContainerTest.cpp  loggingTest.cpp  loggingTest2.cpp  regexTest.cpp  selectorTest.cpp  sigAlrmTest.cpp  stringTest.cpp  timeUtilsTest.cpp  timerTest.cpp
